--- a/fw_downloader/src/main/AndroidManifest.xml
+++ b/fw_downloader/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-feature android:name="android.hardware.usb.host" />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <permission android:name="android.permission.USB_MSR_PERMISSION"/>
+    <permission android:name="android.permission.USB_FW_DOWNLOADER_PERMISSION"/>
 
 
     <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
